[package]
name = "gsm"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["color", "derive", "suggestions"] }
colored = "3.0.0"
dotenvy = "0.15.7"
octocrab = "0.44.1"
pbkdf2 = "0.12.2"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sodiumoxide = { version = "0.2.7", features = ["serde", "std"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
